修正コミット

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     // https://console.firebase.google.com/
     // =====================================================
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_PROJECT_ID.appspot.com",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyA3KlUbxW5cl3zP3ucFC8t2YYC9U1Y5BdM",
+      authDomain: "creatte-contactsystem.firebaseapp.com",
+      projectId: "creatte-contactsystem",
+      storageBucket: "creatte-contactsystem.firebasestorage.app",
+      messagingSenderId: "796237166397",
+      appId: "1:796237166397:web:681f3f14c262a8fc8c3754"
     };
 
     // Firebaseを初期化
