--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
       }
     };
 
-    // DOMContentLoaded後にinitAppを実行
-    document.addEventListener('DOMContentLoaded', () => {
+    // type="module"はDOMContentLoaded後に実行されるため、直接呼び出しでOK
+    // window経由で通常スクリプトのinitAppにアクセス
+    setTimeout(() => {
       if (typeof initApp === 'function') initApp();
-    });
+    }, 0);
   </script>
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;500;600;700&amp;display=swap" rel="stylesheet">
   <style>
@@ -303,7 +304,7 @@
         <svg class="w-5 h-5 absolute left-3 top-1/2 -translate-y-1/2 text-slate-400" fill="none" stroke="currentColor" viewbox="0 0 24 24">
          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
         </svg><input type="text" id="student-search" placeholder="生徒名で検索..." class="w-full pl-10 pr-4 py-2 border border-slate-200 rounded-lg focus:border-emerald-500 transition-colors">
-       </div><select id="student-filter" class="px-4 py-2 border border-slate-200 rounded-lg focus:border-emerald-500 transition-colors"> <option value="">全てのコース</option> <option value="数学">数学</option> <option value="英語">英語</option> <option value="国語">国語</option> <option value="理科">理科</option> <option value="社会">社会</option> </select>
+       </div><input type="text" id="student-filter" placeholder="コースで絞り込み..." class="px-4 py-2 border border-slate-200 rounded-lg focus:border-emerald-500 transition-colors">
       </div>
       <div id="students-list" class="divide-y divide-slate-100">
        <div class="p-8 text-center text-slate-400">
@@ -438,7 +439,7 @@
      </div>
      <div><label class="block text-sm font-medium text-slate-700 mb-2">LINE UserID</label> <input type="text" id="student-line-id" class="w-full px-4 py-3 border border-slate-200 rounded-xl focus:border-emerald-500 transition-colors" placeholder="U1234567890abc...">
      </div>
-     <div><label class="block text-sm font-medium text-slate-700 mb-2">コース <span class="text-red-500">*</span></label> <select id="student-course" required class="w-full px-4 py-3 border border-slate-200 rounded-xl focus:border-emerald-500 transition-colors"> <option value="">選択してください</option> <option value="数学">数学</option> <option value="英語">英語</option> <option value="国語">国語</option> <option value="理科">理科</option> <option value="社会">社会</option> <option value="総合">総合（複数科目）</option> </select>
+     <div><label class="block text-sm font-medium text-slate-700 mb-2">コース <span class="text-red-500">*</span></label> <input type="text" id="student-course" required class="w-full px-4 py-3 border border-slate-200 rounded-xl focus:border-emerald-500 transition-colors" placeholder="例：数学、英語、プログラミング など">
      </div>
      <div><label class="block text-sm font-medium text-slate-700 mb-2">ステータス</label> <select id="student-status" class="w-full px-4 py-3 border border-slate-200 rounded-xl focus:border-emerald-500 transition-colors"> <option value="有効">有効</option> <option value="休会">休会</option> <option value="退会">退会</option> </select>
      </div>
@@ -854,7 +855,9 @@
         );
       }
       if (filterCourse) {
-        filteredStudents = filteredStudents.filter(s => s.course === filterCourse);
+        filteredStudents = filteredStudents.filter(s =>
+          (s.course || '').toLowerCase().includes(filterCourse.toLowerCase())
+        );
       }
       
       if (filteredStudents.length === 0) {
@@ -892,7 +895,7 @@
     }
 
     document.getElementById('student-search')?.addEventListener('input', renderStudentsList);
-    document.getElementById('student-filter')?.addEventListener('change', renderStudentsList);
+    document.getElementById('student-filter')?.addEventListener('input', renderStudentsList);
 
     function updateStudentDropdown() {
       const students = getDataByType('student').filter(s => s.status === '有効');
